incluido informações da api na tela

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <button id="tab-btn">É bot?</button>
     <button id="delete-btn">DELETE ALL</button>
     <button id="pegaBot">PEGABOT</button>
+    <section>
+      <p id="porcentagem"></p>
+      <div id="info"></div>
+    </section>
     <ul id="ul-el"></ul>
     <script src="index.js"></script>
   </body>
