--- a/index.html
+++ b/index.html
@@ -13,14 +13,22 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <input type="text" id="input-el" />
+    <!-- <input type="text" id="input-el" /> -->
+    <div class="input-div" id="input-el">
+      <input required="" type="text" name="text" autocomplete="off" class="input">
+      <label class="user-label">@ perfil no twitter</label>
+    </div>
     <!-- <button id="input-btn">SAVE INPUT</button> -->
-    <button id="tab-btn">É bot?</button>
-    <button id="delete-btn">DELETE ALL</button>
-    <button id="pegaBot">PEGABOT</button>
-    <section>
-      <p id="porcentagem"></p>
-      <div id="info"></div>
+    <div class="btnContainer">
+      <button id="tab-btn">É bot?</button>
+      <button id="delete-btn">DELETE ALL</button>
+      <button id="pegaBot">Pegabot é bot?</button>
+    </div>
+    
+    <section class="resContainer">
+      <div id="img"></div>
+      <p class="porcentagem" id="porcentagem"></p>
+      <div class="info" id="info"></div>
     </section>
     <ul id="ul-el"></ul>
     <script src="index.js"></script>
