--- a/interface/index.html
+++ b/interface/index.html
@@ -6,6 +6,25 @@
     <title>SnitchBot</title>
 </head>
 <body>
+    <h2>SnitchBot</h2>
+    <p class="texts">Esses são seus 10 últimos acessos</p>
+    <ol>
+        <li>Acesso1<span class="pegabot-bot-probability">%</span></li>
+        <li>Acesso2<span class="pegabot-bot-probability">%</span></li>
+        <li>Acesso3<span class="pegabot-bot-probability">%</span></li>
+        <li>Acesso4<span class="pegabot-bot-probability">%</span></li>
+        <li>Acesso5<span class="pegabot-bot-probability">%</span></li>
+        <li>Acesso6<span class="pegabot-bot-probability">%</span></li>
+        <li>Acesso7<span class="pegabot-bot-probability">%</span></li>
+        <li>Acesso8<span class="pegabot-bot-probability">%</span></li>
+        <li>Acesso9<span class="pegabot-bot-probability">%</span></li>
+        <li>Acesso10<span class="pegabot-bot-probability">%</span></li>
+    </ol>
+    <p class="texts">O percentual de contas com alta probabilidade de ser bot é:</p>
+    <div id="progress-information">
+        <progress max="1" value=""></progress>
+        <span id="mean-bot-probability">%</span>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
