removendo @ e acrescentando link analise completa

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   </head>
   <body>
     <!-- <input type="text" id="input-el" /> -->
-    <div class="input-div" id="input-el">
-      <input required="" type="text" name="text" autocomplete="off" class="input">
+    <div class="input-div">
+      <input required="" type="text"  id="input-el" name="text" autocomplete="off" class="input">
       <label class="user-label">@ perfil no twitter</label>
     </div>
     <!-- <button id="input-btn">SAVE INPUT</button> -->
@@ -29,6 +29,7 @@
       <div id="img"></div>
       <p class="porcentagem" id="porcentagem"></p>
       <div class="info" id="info"></div>
+      <div id="link"></div>
     </section>
     <ul id="ul-el"></ul>
     <script src="index.js"></script>
