--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -13,24 +12,36 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
+    <div class="container">
+      <img src="images/pegabot.png" alt="Logo Pegabot" />
+    </div>
+
     <!-- <input type="text" id="input-el" /> -->
     <div class="input-div" id="input-el">
-      <input required="" type="text" name="text" autocomplete="off" class="input">
+      <input
+        required=""
+        type="text"
+        name="text"
+        autocomplete="off"
+        class="input"
+      />
       <label class="user-label">@ perfil no twitter</label>
     </div>
     <!-- <button id="input-btn">SAVE INPUT</button> -->
     <div class="btnContainer">
-      <button id="tab-btn">É bot?</button>
-      <button id="delete-btn">DELETE ALL</button>
-      <button id="pegaBot">Pegabot é bot?</button>
+      <button class="fancy-btn" id="tab-btn">É bot?</button>
+      <button class="fancy-btn" id="pegaBot">Pegabot é bot?</button>
+      <button class="fancy-btn" id="delete-btn">DELETE ALL</button>
     </div>
-    
+
     <section class="resContainer">
       <div id="img"></div>
       <p class="porcentagem" id="porcentagem"></p>
       <div class="info" id="info"></div>
     </section>
+
     <ul id="ul-el"></ul>
+
     <script src="index.js"></script>
   </body>
 </html>
