Alterações no body.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
       <img src="images/pegabot.png" alt="Logo Pegabot" />
     </div>
     <div class="input-div">
-      <input required="" type="text"  id="input-el" name="text" autocomplete="off" class="input">
+      <input
+        required=""
+        type="text"
+        id="input-el"
+        name="text"
+        autocomplete="off"
+        class="input"
+      />
       <label class="user-label">@ perfil no twitter</label>
     </div>
     <!-- <button id="input-btn">SAVE INPUT</button> -->
@@ -27,10 +34,14 @@
     </div>
 
     <section class="resContainer">
-      <div id="img"></div>
-      <p class="porcentagem" id="porcentagem"></p>
-      <div class="info" id="info"></div>
-      <div id="link"></div>
+      <div class="avatar">
+        <div id="img"></div>
+      </div>
+      <div class="info-div">
+        <p class="porcentagem" id="porcentagem"></p>
+        <div class="info" id="info"></div>
+        <div id="link"></div>
+      </div>
     </section>
 
     <ul id="ul-el"></ul>
