alteração de fonte e lista

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
     <div class="container">
       <img src="images/pegabot.png" alt="Logo Pegabot" />
+      <h1 class="pegaTitle">PEGABOT</h1>
     </div>
     <div class="input-div">
       <input required="" type="text"  id="input-el" name="text" autocomplete="off" class="input">
