resultado final do design.

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     </div>
     <!-- <button id="input-btn">SAVE INPUT</button> -->
     <div class="btnContainer">
-      <button class="fancy-btn" id="tab-btn">É bot?</button>
-      <button class="fancy-btn" id="pegaBot">Pegabot é bot?</button>
-      <button class="fancy-btn" id="delete-btn">DELETE ALL</button>
+      <button class="btn" id="tab-btn">É bot?</button>
+      <button class="btn" id="pegaBot">Pegabot é bot?</button>
+      <button id="delete-btn">DELETE ALL</button>
     </div>
 
     <section class="resContainer">
       <div class="avatar">
-        <div id="img"></div>
+        <div class="img-info" id="img"></div>
       </div>
       <div class="info-div">
         <p class="porcentagem" id="porcentagem"></p>
