--- a/index.html
+++ b/index.html
@@ -29,11 +29,10 @@
     </div>
     <!-- <button id="input-btn">SAVE INPUT</button> -->
     <div class="btnContainer">
-      <button class="fancy-btn" id="tab-btn">É bot?</button>
       <button class="fancy-btn" id="pegaBot">Pegabot é bot?</button>
       <button class="fancy-btn" id="delete-btn">DELETE ALL</button>
     </div>
-
+    <p id="digitar"></p>
     <section class="resContainer">
       <div class="avatar">
         <div id="img"></div>
