--- a/index.html
+++ b/index.html
@@ -27,12 +27,11 @@
       />
       <label class="user-label">@ perfil no twitter</label>
     </div>
-    <!-- <button id="input-btn">SAVE INPUT</button> -->
     <div class="btnContainer">
       <button class="fancy-btn" id="pegaBot">Pegabot é bot?</button>
       <button class="fancy-btn" id="delete-btn">DELETE ALL</button>
     </div>
-    <p id="digitar"></p>
+    <p id="digitar" class="digitar"></p>
     <section class="resContainer">
       <div class="avatar">
         <div class="img-info" id="img"></div>
@@ -44,7 +43,7 @@
       </div>
     </section>
 
-    <ul id="ul-el"></ul>
+    <ul id="ul-el" class="lista"></ul>
 
     <script src="index.js"></script>
   </body>
