Created workflow to store URL's in a queue and made other minor changes in order to allow it

--- a/interface/index.html
+++ b/interface/index.html
@@ -3,11 +3,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>SnitchBot</title>
 </head>
 <body>
     <h2>SnitchBot</h2>
-    <p class="texts">Esses são seus 10 últimos acessos</p>
+    <p class="texts">Esses são seus 10 últimos acessos:</p>
     <ol>
         <li>Acesso1<span class="pegabot-bot-probability">%</span></li>
         <li>Acesso2<span class="pegabot-bot-probability">%</span></li>
