--- a/project-2A/popup.html
+++ b/project-2A/popup.html
@@ -17,12 +17,42 @@
   <div class="header">
     <img class="header_logo" src="assets/images/pegabot-logo.svg" alt="Logo Pegabot">
   </div>
-  <form id="form">
-    <label for="user" class="form_label">@perfil no twitter</label>
-    <input type="text" placeholder="Digite aqui..." class="form_input">
-    <button class="form_btn">Pegar</button>
+
+  <!--Tela inicial-->
+  <div class="home-page active">
+    <form id="form">
+      <label for="user" class="form_label">@perfil no twitter</label>
+      <input type="text" placeholder="Digite aqui..." class="form_input">
+      <button class="form_btn">Pegar</button>
+    </form>
+  </div>
+
+  <!--Tela relatório-->
+    <div class="report-page">
+      <div class="grafic">
+        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 86 51" width="220" height="200" enable-background="new 0 0 86 51" class="profile__gauge">
+          <path d="M11.8,19.9C6.8,26.6,4,34.7,3.8,43h19.9c0.2-4,1.6-7.9,4-11.1L11.8,19.9z" id="level-1" fill="#3fe6b2" />
+          <path d="M31,5.8c-7.7,2.7-14.3,7.6-19.2,14.1l15.9,11.9c2.5-3.4,5.9-5.9,9.9-7.3L31,5.8z" id="level-2" fill="#97fcda" />
+          <path d="M37.3,24.7c3.7-1.4,7.7-1.5,11.5-0.4l6.7-18.8c-8-2.6-16.6-2.4-24.6,0.3L37.3,24.7z" id="level-3" fill="#ffc871" />
+          <path d="M54.8,5.3L48,24.1c4.1,1,7.8,3.3,10.5,6.5l16.1-11.8C69.5,12.4,62.6,7.7,54.8,5.3z" id="level4" fill="#b956d1" />
+          <path d="M58.3,30.3c3.1,3.5,5,8,5.3,12.7h19.9c-0.2-8.9-3.3-17.5-8.9-24.4L58.3,30.3z" id="level-5" fill="#7e1a96" />
+          <path id="hand" fill="#333" :transform="'rotate('+ parseFloat(user.bot_probability ? (user.bot_probability.all || 0) : 0) * 180 + ' 43 43)'" d="M0 42.4L0 43 0 43.7 43.1 46.4 51 43 43.1 39.6z">
+            <animateTransform
+              attributeType="xml"
+              attributeName="transform"
+              type="rotate"
+              from="0 43 43"
+              :to="parseFloat(user.bot_probability ? (user.bot_probability.all || 0) : 0) * 180 +' 43 43'"
+              dur="2s"
+              repeatCount="1"/>
+          </path>
+        </svg>
+      </div>
+      <p class="report-username">@botsuspeito2022</p>
+      <p class="report-percent">68%</p>
+      <p class="report-text">Identificamos uma atividade suspeita relacionada com <span class="detail">ataques à ONGs</span>.</p>
+      <button class="load_btn">Veja o relatório completo</button>
     </div>
-  </form>
 
   <script src="index.js"></script>
 </body>
