update manifest e readme

--- a/project-2A/popup.html
+++ b/project-2A/popup.html
@@ -5,12 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link rel="preload" href="assets/style.css">
   <link rel="stylesheet" href="assets/style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com"> <!--Fonts-->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!--Fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"> <!--Fonts-->
   <title>Extensão Pegabot</title>
+  <meta name="description" content="O Pegabot verifica a atividade de uma conta em rede social e dá uma pontuação baseada na probabilidade dessa conta ser um bot. Maiores pontuações são mais bot-like." />
 </head>
 
 <body>
@@ -48,9 +50,9 @@
           </path>
         </svg>
       </div>
-      <p class="report-username">@botsuspeito2022</p>
-      <p class="report-percent">68%</p>
-      <p class="report-text">Identificamos uma atividade suspeita relacionada com <span class="detail">ataques à ONGs</span>.</p>
+      <p class="report-username"></p>
+      <p class="report-percent"></p>
+      <p class="report-text"></span></p>
       <button class="load_btn">Veja o relatório completo</button>
     </div>
 
