Added final code from client side

--- a/interface/index.html
+++ b/interface/index.html
@@ -23,9 +23,10 @@
     </ol>
     <p class="texts">O percentual de contas com alta probabilidade de ser bot é:</p>
     <div id="progress-information">
-        <progress max="1" value=""></progress>
+        <progress max="1" value="0.5"></progress>
         <span id="mean-bot-probability">%</span>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
+    <script type="application/json" src="accesses.json"></script>
 </body>
 </html>
